<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/staff_id"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/fullname_staff"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/etId"
            tools:layout_editor_absoluteX="34dp" />

        <EditText
            android:id="@+id/etCurp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/curp_staff"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/etFullName"
            tools:layout_editor_absoluteX="34dp" />

        <TextView
            android:id="@+id/txtGradeSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="Grado escolar:"
            app:layout_constraintTop_toBottomOf="@+id/etCurp"/>

        <Spinner
            android:id="@+id/gradeSchool"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:entries="@array/grade_school"
            app:layout_constraintTop_toBottomOf="@+id/txtGradeSchool"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/txtSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sexo:"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/gradeSchool"/>

        <RadioGroup
            android:id="@+id/rdG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtSex"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp">

            <RadioButton
                android:id="@+id/rbM"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="Mujer" />

            <RadioButton
                android:id="@+id/rbH"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="Hombre" />
        </RadioGroup>

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="date"
            android:hint="@string/dateentry_staff"
            app:layout_constraintTop_toBottomOf="@+id/rdG"/>

        <EditText
            android:id="@+id/txtkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPersonName"
            android:hint="@string/budgetkey_staff"
            app:layout_constraintTop_toBottomOf="@+id/txtDate"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="Agregar"
            app:cornerRadius="10dp"
            android:backgroundTint="#006064"
            app:layout_constraintTop_toBottomOf="@+id/txtkey"
            tools:layout_editor_absoluteX="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>